Changelog for Varnish Purge (MODx Revolution)

1.0.3-beta
==========
- Added lexicon string for when Varnish refuses or rejects a purge request
- Fixed a bug causing the error log to fill with "<id> was requested but no alias was located"
- Improved finding the site contexts absolute URL

1.0.2-beta
==========
- Fixed cURL potentially being incorrectly reported as not callable
- Fixed multiple domain purging
- Disabled debugging by default
- Added new system setting to enable/disable documents getting purged when saved in MODx
- Added new system setting to enable/disable the entire domain getting purged when clearing the MODx cache

1.0.1-beta
==========
- Fixed a potential fatal error that could cause a 'Save' loop
- file_get_contents is set to default upon installation if cURL module not available
- Added a system setting for PURGE request method
- Added file_get_contents support for PURGE requests
- MODX_SITE_URL constant used for guessing hosts more accurately when purging an entire domain
- Improved debug
- Minor tweaks
- Decreased default timeout to 5 seconds

1.0.0-beta
==========
- Initial public release
