@@ -5,6 +5,7 @@ Changelog for Varnish Purge (MODx Revolution)
 - Added lexicon string for when Varnish refuses or rejects a purge request
 - Fixed a bug causing the error log to fill with "<id> was requested but no alias was located"
 - Improved finding the site contexts absolute URL
+- Added success/failure popup messages
 
 1.0.2-beta
 ==========
